src/objects/AP_Aging__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>used to store last effective date of APAgingBatch</description>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Generate_Due_Batch_Run_Date__c</fullName>
        <description>represents last run date of generate due batch</description>
        <label>Last Generate Due Batch Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Generate_Due_Billing_Period__c</fullName>
        <description>used to store the last generate due billing period</description>
        <label>Last Generate Due Billing Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run_Of_Member_Aging__c</fullName>
        <description>stores the date of the last run of the member aging batch</description>
        <label>Last Run Of Member Aging</label>
        <type>Date</type>
    </fields>
    <label>AP Aging</label>
</CustomObject>